[package]
name = "mdbook-classy"
version = "0.1.0"

authors = ["Doug Bradshaw <dhbradshaw@gmail.com>"]
categories = ["command-line-utilities"]
description = "An mdbook preprocessor for adding html-css classes to markdown."
edition = "2018"
exclude = [
  "examples/*",
]
homepage = "https://github.com/reviewable/mdbook-classy"
keywords = ["mdbook", "classy", "markdown", "commonmark", "css"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/reviewable/mdbook-classy"

[dependencies]
clap = {version = "4.4.4", features = ["derive"]}
mdbook = "0.4"
pulldown-cmark = {version = "0.9.3", default-features = false}
pulldown-cmark-to-cmark = "11.0.0"
serde_json = "1.0"
